# kinova-ros

./: tatus
kinova_bringup/launch/config/: robot_parameters.yaml
kinova_driver/include/kinova_driver/: kinova_api.h
orthopus_addon/: CMakeLists.txt  package.xml
orthopus_addon/config/: settings.yaml
orthopus_addon/include/orthopus_addon/: hl_controller.h
orthopus_addon/include/orthopus_addon/input_device/: device_freejoy.h  freejoy_config.h
orthopus_addon/launch/: demo.launch
orthopus_addon/scripts/gui/: interface.html
orthopus_addon/scripts/gui/css/: bootstrap.min.css  range-slider.css
orthopus_addon/scripts/gui/css/fonts/: fonts.css
orthopus_addon/scripts/gui/javascript/: orthopus_kinova_ui.js
orthopus_addon/src/: hl_controller.cpp
orthopus_addon/src/input_device/: device_freejoy.cpp
test_package/: CMakeLists.txt  package.xml
test_package/include/test_package/: test_package.h
test_package/src/: test_package.cpp
