<?xml version="1.0"?>
<package format="2">
  <name>orthopus_addon</name>
  <version>0.0.1</version>
  <description>Playground on top of kinova ros stack</description>
  <author>Florian Armange</author>
  <maintainer email="florian.armange@orthopus.com">Florian Armange</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>kinova_msgs</depend>
  <depend>joy</depend>
  <export>
  </export>
</package>

